# AoC2019

./: AoC2019.cabal  CHANGELOG.md  README.md
src/: AoC2019.hs
src/Day1/: Day1.hs  Part1.hs
src/Day10/: Day10.hs
src/Day2/: Day2.hs
src/Day3/: Day3.hs
src/Day4/: Day4.hs
src/Day5/: Day5.hs
src/Day9/: Day9.hs
